# rules_jupyter

./: BUILD.bazel  MODULE.bazel  README.md  defs.bzl
