"""
# https://github.com/bazelbuild/rules_python/issues/63
# ci/cd with notebooks https://github.com/treebeardtech/nbmake-examples
# use nbmake with notebooks https://github.com/treebeardtech/nbmake
# this guy symlinked it into share? https://github.com/jupyter/notebook/issues/6974#issuecomment-1821578719, could work

"""

load("//:defs.bzl", "py_notebook")

py_notebook(
    name = "jupyter",
)