"""A module for running jupyter notebooks from bazel."""

module(
    name = "rules_jupyter",
    version = "0.0.1",
)

### Python ###
bazel_dep(name = "rules_python", version = "0.27.1")

PYTHON_VERSION = "3.11"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = PYTHON_VERSION,
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "external_py",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tools/python/external:requirements_lock.txt",
)

use_repo(pip, "external_py")

### Skylib ###
bazel_dep(name = "bazel_skylib", version = "1.5.0")

### Codeowners ###
bazel_dep(name = "rules_codeowners", version = "0.2.1")
